fixed the scrollbar

--- a/tailwind.css
+++ b/tailwind.css
@@ -13,6 +13,28 @@
     color:white;
     background-color: hsl(var(--s) / var(--tw-bg-opacity));
 }
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: hsl(var(--p) / var(--tw-bg-opacity));
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: hsl(var(--p) / var(--tw-bg-opacity));
+    border-radius: 5px;
+  }
+
 /*  
 select:focus {
     background-color: hsl(var(--s) / var(--tw-bg-opacity));
